// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`region encoding encode multiple and complex region 1`] = `
Array [
  Object {
    "color": undefined,
    "end": 100,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 20,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 30,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 50,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 1,
  },
]
`;

exports[`region encoding encode multiple and complex region with color 1`] = `
Array [
  Object {
    "color": "#00EE55",
    "end": 100,
    "start": 1,
  },
  Object {
    "color": "#00E800AA",
    "end": 20,
    "start": 1,
  },
  Object {
    "color": "#00EE55",
    "end": 100,
    "start": 30,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 50,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 1,
  },
]
`;

exports[`region encoding encode multiple region 1`] = `
Array [
  Object {
    "color": undefined,
    "end": 5,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 20,
    "start": 10,
  },
  Object {
    "color": undefined,
    "end": 50,
    "start": 30,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 50,
  },
]
`;

exports[`region encoding encode multiple region with color 1`] = `
Array [
  Object {
    "color": "#00EE55",
    "end": 5,
    "start": 1,
  },
  Object {
    "color": undefined,
    "end": 20,
    "start": 10,
  },
  Object {
    "color": "#00E800AA",
    "end": 50,
    "start": 30,
  },
  Object {
    "color": undefined,
    "end": 100,
    "start": 50,
  },
]
`;

exports[`region encoding encode simple region 1`] = `
Array [
  Object {
    "color": undefined,
    "end": 10,
    "start": 2,
  },
]
`;

exports[`region encoding encode simple region with color 1`] = `
Array [
  Object {
    "color": "#00EE55",
    "end": 10,
    "start": 2,
  },
]
`;

exports[`region encoding encode simple region with color alpha 1`] = `
Array [
  Object {
    "color": "#00EE55A0",
    "end": 10,
    "start": 2,
  },
]
`;

exports[`region encoding encode whole region with color 1`] = `
Array [
  Object {
    "color": "#00EE55",
    "end": Infinity,
    "start": -Infinity,
  },
]
`;

exports[`region encoding encode whole region with default color 1`] = `
Array [
  Object {
    "color": undefined,
    "end": Infinity,
    "start": -Infinity,
  },
]
`;

exports[`region encoding encode whole region 1`] = `
Array [
  Object {
    "color": undefined,
    "end": Infinity,
    "start": -Infinity,
  },
]
`;

exports[`region encoding encode whole region with color 1`] = `
Array [
  Object {
    "color": "#00EE55",
    "end": Infinity,
    "start": -Infinity,
  },
]
`;
